// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should reject invalid dates 1`] = `
[
  {
    "code": "is_nan",
    "message": "Expected a number, received NaN",
    "path": [],
  },
]
`;

exports[`should reject other values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "date",
    "message": "Expected a date, received null",
    "path": [],
    "received": "null",
  },
]
`;

exports[`should reject other values 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "date",
    "message": "Expected a date, received a string",
    "path": [],
    "received": "string",
  },
]
`;

exports[`should reject other values 3`] = `
[
  {
    "code": "invalid_type",
    "expected": "date",
    "message": "Expected a date, received an object",
    "path": [],
    "received": "object",
  },
]
`;
